external-crates/move/crates/move-compiler/tests/development/signed_ints/invalid/signed_int_literal_too_large_i16.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: development
  lint: false
---
error[E01006]: invalid number literal
  ┌─ tests/development/signed_ints/invalid/signed_int_literal_too_large_i16.move:3:9
  │
3 │         32768i16;
  │         ^^^^^^^^ Invalid number literal. This literal does not fit into the type 'i16'

error[E01006]: invalid number literal
  ┌─ tests/development/signed_ints/invalid/signed_int_literal_too_large_i16.move:4:23
  │
4 │         let _x: i16 = 40000i16;
  │                       ^^^^^^^^ Invalid number literal. This literal does not fit into the type 'i16'

error[E01006]: invalid number literal
  ┌─ tests/development/signed_ints/invalid/signed_int_literal_too_large_i16.move:5:10
  │
5 │         -32769i16;
  │          ^^^^^^^^ Invalid number literal. This literal does not fit into the type 'i16'
